--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
-  "name": "DisciplineDesign",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@csstools/normalize.css": "^10.0.0",
-    "@u-wave/react-vimeo": "^0.8.1",
-    "bootstrap": "^4.4.1",
-    "classnames": "^2.2.6",
-    "git": "^0.1.5",
-    "react": "^16.8.6",
-    "react-accessible-accordion": "^3.0.1",
-    "react-audio-player": "^0.11.1",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-burger-menu": "^2.6.15",
-    "react-dom": "^16.8.6",
-    "react-light-accordion": "^0.1.4",
-    "react-medium-image-zoom": "^3.1.2",
-    "react-metismenu": "^1.4.0",
-    "react-newline-to-break": "^1.0.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
-    "react-spring": "^8.0.27",
-    "react-sticky": "^6.0.3",
-    "react-text-loop": "^2.2.1",
-    "simple-react-lightbox": "^2.0.5",
-    "slugify": "^1.3.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "npm": "^6.13.3",
-    "prettier": "^1.17.1"
-  }
+	"name": "DisciplineDesign",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@csstools/normalize.css": "^10.0.0",
+		"@u-wave/react-vimeo": "^0.8.3",
+		"bootstrap": "^4.5.0",
+		"classnames": "^2.2.6",
+		"git": "^0.1.5",
+		"react": "^16.13.1",
+		"react-accessible-accordion": "^3.0.1",
+		"react-audio-player": "^0.11.1",
+		"react-bootstrap": "^1.0.1",
+		"react-dom": "^16.13.1",
+		"react-light-accordion": "^0.1.4",
+		"react-medium-image-zoom": "^3.1.2",
+		"react-metismenu": "^1.4.0",
+		"react-newline-to-break": "^1.0.6",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.0.1",
+		"react-spring": "^8.0.27",
+		"react-sticky": "^6.0.3",
+		"react-text-loop": "^2.2.1",
+		"simple-react-lightbox": "^2.8.0",
+		"slugify": "^1.4.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"npm": "^6.14.5",
+		"prettier": "^1.17.1"
+	}
 }
