--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"react-medium-image-zoom": "^3.1.2",
 		"react-metismenu": "^1.4.0",
 		"react-newline-to-break": "^1.0.6",
+		"react-parallax": "^3.0.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.0.1",
 		"react-spring": "^8.0.27",
 		"react-sticky": "^6.0.3",
 		"react-text-loop": "^2.2.1",
+		"react-youtube-background": "^1.0.0",
 		"simple-react-lightbox": "^2.8.0",
 		"slugify": "^1.4.0",
 		"styled-components": "^5.1.1"
