--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-bootstrap": "^1.0.1",
 		"react-dom": "^16.13.1",
 		"react-light-accordion": "^0.1.4",
+		"react-mailto": "^0.4.0",
 		"react-medium-image-zoom": "^3.1.2",
 		"react-metismenu": "^1.4.0",
 		"react-newline-to-break": "^1.0.6",
